# mtgapi

./: .dockerignore  .gitignore  .pre-commit-config.yaml  404.html  LICENSE  README.md  Taskfile.yaml  docker-compose.yml  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: coverage-badge.yml  coverage.yml  dependency-audit.yml  docker-publish.yml  docs.yml  lint.yml  lock-consistency.yml  pytest.yml
concepts/architecture/: index.html
concepts/caching/: index.html
concepts/domain-models/: index.html
concepts/feature-flags/: index.html
concepts/metrics-tracing/: index.html
concepts/services/: index.html
deploy/: Dockerfile  docker-compose.yaml  healthcheck.sh
docs/: api.md  architecture.md  caching.md  configuration.md  development.md  domain-models.md  feature-flags.md  index.md  metrics-tracing.md  migration.md  openapi.md  operations.md  schemas.md  services.md  testing-strategy.md
docs/_generated_openapi/: openapi.json
docs/_generated_schemas/: mana_value.schema.json  mtg_card.schema.json  mtgio_card.schema.json
docs/concepts/: architecture.md  caching.md  domain-models.md  feature-flags.md  metrics-tracing.md  services.md
docs/guides/: configuration.md  development.md  operations.md  testing-strategy.md
docs/reference/: configuration.md  openapi.md  schemas.md
guides/development/: index.html
guides/operations/: index.html
guides/testing-strategy/: index.html
reference/api/: index.html
reference/configuration/: index.html
reference/schemas/: index.html
scripts/: __init__.py  check_docs_embeddings.py  export_openapi.py  export_schemas.py  update_openapi_markdown.py  update_schemas_markdown.py
search/: search_index.json
tests/: conftest.py  docker-compose.yml  globals.py
(+49 files in other folders)
